--- a/pf/lp3/assets/css/styles.css
+++ b/pf/lp3/assets/css/styles.css
@@ -207,7 +207,7 @@ img {
 .home__circle {
   width: 250px;
   height: 250px;
-  background-color: slategray;
+  background-color: var(--black-color-light);
   background: linear-gradient(180deg,
               hsl(0, 0%, 100),
               hsl(0, 0%, 96%));
@@ -221,6 +221,21 @@ img {
 /* Swiper class */
 .swiper {
   margin-inline: initial;
+}
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: -2rem;
+}
+.swiper-pagination-bullet {
+  width: 1rem;
+  height: .25rem;
+  border-radius: 1rem;
+  background-color: var(--black-color-light);
+  opacity: 1;
+  transition: background-color .3s, width .3s;
+}
+.swiper-pagination-bullet-active {
+  width: 1.25rem;
+  background-color: var(--black-color);
 }
 
 /*=============== BREAKPOINTS ===============*/
