--- a/pf/lp3/assets/css/styles.css
+++ b/pf/lp3/assets/css/styles.css
@@ -86,6 +86,7 @@ img {
   left: 0;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
+  transition: box-shadow .4s;
 }
 .nav {
   height: var(--header-height);
@@ -141,7 +142,9 @@ img {
 }
 
 /* Add shadow header */
-
+.shadow-header {
+  box-shadow: 0 1px 16px hsla(0, 0%, 0%, .1);
+}
 
 /*=============== HOME ===============*/
 .home__container {
