--- a/pf/lp3/assets/css/styles.css
+++ b/pf/lp3/assets/css/styles.css
@@ -86,6 +86,7 @@ img {
   left: 0;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
+  transition: box-shadow .4s;
 }
 .nav {
   height: var(--header-height);
@@ -141,7 +142,9 @@ img {
 }
 
 /* Add shadow header */
-
+.shadow-header {
+  box-shadow: 0 1px 16px hsla(0, 0%, 0%, .1);
+}
 
 /*=============== HOME ===============*/
 .home__container {
@@ -207,6 +210,7 @@ img {
 .home__circle {
   width: 250px;
   height: 250px;
+  background-color: var(--black-color-light);
   background: linear-gradient(180deg,
               hsl(0, 0%, 100),
               hsl(0, 0%, 96%));
@@ -220,6 +224,21 @@ img {
 /* Swiper class */
 .swiper {
   margin-inline: initial;
+}
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: -2rem;
+}
+.swiper-pagination-bullet {
+  width: 1rem;
+  height: .25rem;
+  border-radius: 1rem;
+  background-color: var(--black-color-light);
+  opacity: 1;
+  transition: background-color .3s, width .3s;
+}
+.swiper-pagination-bullet-active {
+  width: 1.25rem;
+  background-color: var(--black-color);
 }
 
 /*=============== BREAKPOINTS ===============*/
